--- a/frontend/styles/authStyle.css
+++ b/frontend/styles/authStyle.css
@@ -1,6 +1,6 @@
 body {
             font-family: Arial, sans-serif;
-            background: #f4f4f4;
+            background: #ffa4c1;
             display: flex;
             justify-content: center;
             align-items: center;
