--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -2,7 +2,7 @@
   height: 100vh;
 }
 .navbar-custom {
-  background-color: #f6cbef;
+  background-color: #f093b7;
 }
 .card-custom {
   background-color: #fce4ec;
